# DutchPoliticalFacebookAdComparision

./: .gitattributes  .gitignore  README.md  about.html  data.json  index.html  party-text.html  party.html  pyproject.toml  test.html
.github/workflows/: ci.yaml
2021/: index.html
2021/website/: 50+.html  about.html  bbb.html  bij1.html  bvnl.html  cda.html  cu.html  (+13 more)
data/: data.json  facebook_page_ids.csv
js/: active_ads_charts.js  charts.js  helper.js  impressions_charts.js  party-charts.js  party-text-charts.js  potential_reach_charts.js  spending_charts.js  utils.js
pages/: 50+-statistics.html  50p-statistics.html  about.html  bbb-statistics.html  bij1-statistics.html  cda-statistics.html  cu-statistics.html  d66-statistics.html  denk-statistics.html  fvd-statistics.html  gl-statistics.html  ja21-statistics.html  pvda-statistics.html  pvdd-statistics.html  pvv-statistics.html  sgp-statistics.html  sp-statistics.html  volt-statistics.html  vvd-statistics.html
parsing/: ad.py  constants.py  download.py  models.py  parse_pages.py  parser.py  parsing.py  processing-general.py  processing-party.py  processing-theme.py  processing-themes.py  processing.py  template.py  text-processing.py  themes.py  utils.py
templates/: about.html  base.html  index.html  nav.html  party-statistics.html  party-text.html  party-theme.html  party.html  theme-party-text.html  theme-text.html  theme.html  themes.html
website/: 50+-gezondheidszorg.html  50+-klimaat.html  50+-onderwijs.html  50+-statistics.html  50+-text.html  50+.html  about.html  bbb-gezondheidszorg.html  bbb-klimaat.html  bbb-onderwijs.html  bbb-statistics.html  bbb-text.html  bbb-woningmarkt.html  bbb.html  bij1-gezondheidszorg.html  bij1-klimaat.html  bij1-onderwijs.html  bij1-statistics.html  bij1-text.html  bij1-woningmarkt.html  bij1.html  bvnl-gezondheidszorg.html  bvnl-klimaat.html  bvnl-onderwijs.html  bvnl-woningmarkt.html  bvnl.html  cda-gezondheidszorg.html  cda-klimaat.html  cda-onderwijs.html  cda-statistics.html  cda-text.html  cda-woningmarkt.html  cda.html  cu-gezondheidszorg.html  cu-klimaat.html  cu-onderwijs.html  cu-statistics.html  cu-text.html  cu-woningmarkt.html  cu.html  (+143 more)
(+159 files in other folders)
