[tool.poetry]
name = "dutchpoliticalfacebookadcomparision"
version = "1"
description = ""
authors = ["Joren Vrancken"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
peewee = "^3.16.2"
requests = "^2.31.0"
spacy = "^3.5.3"
Unidecode = "^1.3.6"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
jinja2 = "^3.1.2"
unidecode = "^1.3.6"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
toml = "^0.10.2"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = "constants, models, parsing, themes, utils"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
