[tool.poetry]
name = "dutchpoliticalfacebookadcomparision"
version = "1"
description = ""
authors = ["Joren Vrancken"]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
peewee = "^3.17.0"
requests = "^2.31.0"
spacy = "^3.7.2"
pandas = "^2.1.2"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
jinja2 = "^3.1.2"
unidecode = "^1.3.7"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
black = "^23.10.1"
isort = "^5.12.0"
toml = "^0.10.2"
flake8 = "^6.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = "constants, models, parsing, themes, utils"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
