[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11,<3.13"
peewee = "^3.17.6"
requests = "^2.32.3"
spacy = "^3.8.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
jinja2 = "^3.1.4"
unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"
black = "^24.10.0"
isort = "^5.13.2"
toml = "^0.10.2"
flake8 = "^7.1.1"
ruff = "^0.6.9"

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = "constants, models, parsing, themes, utils"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
